[project]
name = "block-stdout"
dynamic = ["version"]
description = "Python module that blocks the standard output, preventing print statements from being displayed"
readme = "README.md"
authors = [{ name = "Vignesh Sivanandha Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
keywords = ["python", "block-stdout"]
requires-python = ">=3"

[tool.setuptools]
packages     = ["blockstdout"]

[tool.setuptools.dynamic]
version      = {attr = "blockstdout.version"}

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage        = "https://github.com/thevickypedia/block-stdout"
Docs            = "https://thevickypedia.github.io/block-stdout"
